--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -9,11 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "import requests\n",
+    "from bs4 import BeautifulSoup"
    ]
   },
   {
@@ -25,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +35,7 @@
        "200"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +43,26 @@
    "source": [
     "url = \"https://www.ceneo.pl/84514582#tab=reviews\"\n",
     "response = requests.get(url)\n",
-    "response.status_code"
+    "response.status_code\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if response.status_code == 200:\n",
+    "    text = response.text\n",
+    "    page_dom = BeautifulSoup(text, \"html.parser\")\n",
+    "    opinions = page_dom.select(\"div.js_product-review:not(.user-post--highlight)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dla każdej z opini wydobycie z kodu  HTML poszczególnych składowych i zapisanie ich w postaci złożonych struktur danych"
    ]
   },
   {
@@ -50,14 +70,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "for opinion in opinions:\n",
+    "    try:\n",
+    "        single_opinion = {\n",
+    "            \"review_id\": opinion['data-entry-id'],\n",
+    "            \"author\": opinion.select_one(\"span.user-post__author-name\").text.strip(),\n",
+    "            \"recomendation\": opinion.select_one(\"span.user-post__author-recomendation > em\").text.strip(),\n",
+    "            \"stars\": opinion.select_one(\"span.user-post__score-count\").text.strip(),\n",
+    "            \"pros\": [p.text.strip() for p in opinion.select(\"div.review-feature__item--positive\")],\n",
+    "            \"cons\": [c.text.strip() for c in opinion.select(\"div.review-feature__item--negative\")],\n",
+    "            \"content\": opinion.select_one(\"div.user-post__text\").text.strip(),\n",
+    "            \"likes\": opinion.select_one(\"button.vote-yes > span\").text.strip(),\n",
+    "            \"dislikes\" : opinion.select_one(\"button.vote-no > span\").text.strip(),\n",
+    "            \"publish_date\": opinion.select_one(\"span.user-post__published > time:nth-child(1)\")['datetime'].strip(),\n",
+    "            \"publish_date\": opinion.select_one(\"span.user-post__published > time:nth-child(2)\")['datetime'].strip(),\n",
+    "        }\n",
+    "        print(single_opinion)\n",
+    "    except (AttributeError, TypeError):\n",
+    "        pass    "
+   ]
   },
   {
    "cell_type": "code",
@@ -83,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
